--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scuttlekit",
+  "name": "ssb-scuttlekit",
   "version": "0.0.1",
   "author": "Isotropy Team<isotropy@agilehead.com>",
   "contributors": [
