--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^9.4.7",
     "@types/ws": "^4.0.1",
     "querystring": "^0.2.0",
+    "scuttlekit-sqlite": "^0.0.1",
     "ws": "^5.0.0"
   },
   "devDependencies": {
