--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "@types/node": "^9.4.7",
     "@types/ws": "^4.0.1",
+    "muxrpc": "^7.0.1",
+    "pull-ws": "^3.3.1",
     "querystring": "^0.2.0",
-    "scuttlekit-sqlite": "^0.0.1",
     "ws": "^5.0.0"
   },
   "devDependencies": {
