--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,11 @@
     "@types/react": "^16.3.10",
     "@types/react-dom": "^16.0.5",
     "@types/ws": "^4.0.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
@@ -30,12 +35,17 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "redux-jetpack": "^0.0.14",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
     "ws": "^5.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.44",
     "@types/should": "^11.2.0",
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "ts-loader": "^4.2.0"
   }
 }
