--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
+    "declarationDir": "./",
     "lib": ["es2018", "dom"],
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
